implement user_subscriptions
